fix layout bug after customizing materialize navbar

--- a/_sass/materialize/custom/_navbar.scss
+++ b/_sass/materialize/custom/_navbar.scss
@@ -22,13 +22,13 @@
 
   a { color: $navbar-font-color; }
 
-  i,
-  [class^="fa"] {
-    display: block;
-    font-size: 24px;
-    height: $navbar-height-mobile;
-    line-height: $navbar-line-height-mobile;
-  }
+  // i,
+  // [class^="fa"] {
+  //   display: block;
+  //   font-size: 24px;
+  //   height: $navbar-height-mobile;
+  //   line-height: $navbar-line-height-mobile;
+  // }
 
   .nav-wrapper {
     position: relative;
